# FEPI-Backend

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  seed.py  server.py
app/: config.py  dependencies.py  logger.py
app/application/: __init__.py
app/application/aggregate/: __init__.py
app/application/public/: __init__.py
app/domain/aggregate/: __init__.py  constants.py
app/domain/exceptions/: __init__.py  base_domain_exception.py  dish_not_available.py  dish_not_found.py  email_already_exists.py  group_not_found.py  invalid_credentials.py  invalid_verification_code.py  is_not_authorized.py  order_already_active.py  order_item_not_found.py  order_not_found.py  payment_not_found.py  session_expired.py  session_not_found.py  session_not_valid.py  table_not_found.py  verification_expired.py  verification_not_found.py
app/domain/repositories/: __init__.py  dish_repository.py  group_repository.py  order_repository.py  session_repository.py  settings_repository.py  table_repository.py  user_repository.py  verification_repository.py
app/domain/services/: __init__.py  code_generator_service.py  email_service.py  encryption_service.py  render_service.py
app/infrastructure/events/: __init__.py  event_bus.py
app/infrastructure/inyections/: __init__.py
app/infrastructure/middlewares/: __init__.py  context_middleware.py  error_middleware.py
app/infrastructure/services/: __init__.py  code_generator_service.py  email_service.py  encryption_service.py  render_service.py  (+1 more)
tests/: conftest.py  test_create_user.py  test_login.py
(+165 files in other folders)
