[project]
name = "fepi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "jose>=1.0.0",
    "orjson>=3.11.8",
    "pydantic>=2.13.3",
    "pymongo>=4.17.0",
    "pytz>=2026.1.post1",
    "uuid7>=0.1.0",
    "uvicorn[standard]>=0.46.0",
]
