[project]
name = "fepi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argon2-cffi>=23.1.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "python-jose[cryptography]>=3.3.0",
    "orjson>=3.11.8",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.0.0",
    "motor>=3.0.0",
    "pymongo>=4.17.0",
    "pytz>=2026.1.post1",
    "uuid7>=0.1.0",
    "uvicorn[standard]>=0.46.0",
    "websockets>=16.0",
    "resend>=2.30.0",
]

[dependency-groups]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
